<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手电筒</string>
    <string name="action_settings">Settings</string>
    <string name="bottomwords">西科视觉</string>
    <string name="title_activity_settings">设置</string>
    <string name="settings">设置</string>
    <string name="led">启动时开灯</string>
    <string name="sound">启用声音</string>
    <string name="skin">深色皮肤</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="longclick">长按启动报警</string>
    <string name="tip">提示</string>
    <string name="yesornot">确定要报警吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_info">关于</string>
    <string name="version">Version:1.3.0</string>

</resources>